day16/istio-service-mesh/k8s/istio/virtual-services/recommendation-canary-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: recommendation-canary
spec:
  hosts:
  - recommendation-service
  http:
  - match:
    - headers:
        canary:
          exact: "true"
    route:
    - destination:
        host: recommendation-service
        subset: v2
  - route:
    - destination:
        host: recommendation-service
        subset: v1
      weight: 90
    - destination:
        host: recommendation-service
        subset: v2
      weight: 10
